--- a/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Products/Index.cshtml
+++ b/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Products/Index.cshtml
@@ -4,11 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="text-decoration-none btn btn-dark"><i class="bi bi-plus-lg"></i> Adicionar novo Produto </a>
 </p>
+
+
+
 <table class="table">
     <thead>
         <tr>
@@ -31,29 +32,48 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StockAmount)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ProductID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ProductID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ProductID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProductName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StockAmount)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Category)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ProductID" class="text-dark text-decoration-none"> Editar <i class="bi bi-pencil-square"></i></a> |
+                    <a asp-action="Details" asp-route-id="@item.ProductID" class="text-dark text-decoration-none">Detalhes <i class="bi bi-arrow-right"></i> </a> |
+                    <a asp-action="Delete" asp-route-id="@item.ProductID" class="text-dark text-decoration-none"> Deletar <i class="bi bi-trash-fill"></i></a>
+
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+<div class="row gap-5">
+    @foreach (var item in Model)
+    {
+
+        <div class="card col-3" style="width: 13rem;">
+
+            <div class="card-body ">
+                <h5 class="card-title">@Html.DisplayFor(modelItem => item.ProductName)</h5>
+                <p class="card-text">@Html.DisplayFor(modelItem => item.Description)</p>
+                <p class="card-text">@Html.DisplayFor(modelItem => item.Price)</p>
+                <a href="#" class="btn btn-dark">Comprar</a>
+            </div>
+        </div>
+
+    }
+</div>
