--- a/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/AccessLevels/Details.cshtml
+++ b/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/AccessLevels/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhes</h1>
 
 <div>
-    <h4>AccessLevel</h4>
+  
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -19,6 +19,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.AccessLevelID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.AccessLevelID" class="btn btn-dark mt-3">Editar</a>
+    <a asp-action="Index" class="btn btn-light mt-3">Voltar a Lista</a>
 </div>
