--- a/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Clients/Details.cshtml
+++ b/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Clients/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhes do Cliente</h1>
 
 <div>
-    <h4>Client</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -91,6 +90,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ClientID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.ClientID" class="btn btn-dark mt-3">Editar</a>
+    <a asp-action="Index" class="btn btn-light mt-3">Voltar a Lista</a>
 </div>
