--- a/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Employees/Create.cshtml
+++ b/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Employees/Create.cshtml
@@ -4,64 +4,71 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Adicionar Novo Funcionário</h1>
 
-<h4>Employee</h4>
+
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div >
+    <div >
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="EmployeeName" class="control-label"></label>
-                <input asp-for="EmployeeName" class="form-control" />
-                <span asp-validation-for="EmployeeName" class="text-danger"></span>
+
+            <div class="row mb-3">
+                <div class="form-group col-3">
+                    <label asp-for="EmployeeName" class="control-label"></label>
+                    <input asp-for="EmployeeName" class="form-control" />
+                    <span asp-validation-for="EmployeeName" class="text-danger"></span>
+                </div>
+                <div class="form-group col-3">
+                    <label asp-for="LastName" class="control-label"></label>
+                    <input asp-for="LastName" class="form-control" />
+                    <span asp-validation-for="LastName" class="text-danger"></span>
+                </div>
+                <div class="form-group col-3">
+                    <label asp-for="PhoneNumber" class="control-label"></label>
+                    <input asp-for="PhoneNumber" class="form-control" />
+                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                </div>
+                <div class="form-group col-3">
+                    <label asp-for="EmployeeCPF" class="control-label"></label>
+                    <input asp-for="EmployeeCPF" class="form-control" />
+                    <span asp-validation-for="EmployeeCPF" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
+            
+            <div class="row mb-3">
+                <div class="form-group col-3">
+                    <label asp-for="HiringDate" class="control-label"></label>
+                    <input asp-for="HiringDate" class="form-control" />
+                    <span asp-validation-for="HiringDate" class="text-danger"></span>
+                </div>
+                <div class="form-group col-3">
+                    <label asp-for="Position" class="control-label"></label>
+                    <input asp-for="Position" class="form-control" />
+                    <span asp-validation-for="Position" class="text-danger"></span>
+                </div>
+                <div class="form-group col-3">
+                    <label asp-for="AccessLevel" class="control-label"></label>
+                    <input asp-for="AccessLevel" class="form-control" />
+                    <span asp-validation-for="AccessLevel" class="text-danger"></span>
+                </div>
+                
+                <div class="form-group col-3">
+                    <label asp-for="Register" class="control-label"></label>
+                    <input asp-for="Register" class="form-control" />
+                    <span asp-validation-for="Register" class="text-danger"></span>
+                </div>
             </div>
+            
             <div class="form-group">
-                <label asp-for="PhoneNumber" class="control-label"></label>
-                <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EmployeeCPF" class="control-label"></label>
-                <input asp-for="EmployeeCPF" class="form-control" />
-                <span asp-validation-for="EmployeeCPF" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Position" class="control-label"></label>
-                <input asp-for="Position" class="form-control" />
-                <span asp-validation-for="Position" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AccessLevel" class="control-label"></label>
-                <input asp-for="AccessLevel" class="form-control" />
-                <span asp-validation-for="AccessLevel" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="HiringDate" class="control-label"></label>
-                <input asp-for="HiringDate" class="form-control" />
-                <span asp-validation-for="HiringDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Register" class="control-label"></label>
-                <input asp-for="Register" class="form-control" />
-                <span asp-validation-for="Register" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Adicionar" class="btn btn-success mt-3" />
+                <a asp-action="Index" class="btn btn-light mt-3">Voltar a Lista</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
