--- a/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Products/Delete.cshtml
+++ b/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Products/Delete.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Deletar Produto</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você tem certeza que quer deletar esse produto?</h3>
 <div>
-    <h4>Product</h4>
+
     <hr />
-    <dl class="row">
+    <dl class="">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ProductName)
         </dt>
@@ -45,7 +45,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ProductID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Deletar" class="btn btn-danger  mt-2" />
+        <a asp-action="Index" class="btn btn-light mt-2">Voltar a Lista</a>
     </form>
 </div>
