--- a/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Products/Details.cshtml
+++ b/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Products/Details.cshtml
@@ -4,13 +4,12 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhes do Produto</h1>
 
 <div>
-    <h4>Product</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+    <dl class="mb-2">
+        <dt class = "col-sm-2 ">
             @Html.DisplayNameFor(model => model.ProductName)
         </dt>
         <dd class = "col-sm-10">
@@ -43,6 +42,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ProductID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.ProductID" class="btn btn-dark mt-3">Editar</a> 
+    <a asp-action="Index" class="btn btn-light mt-3">Voltar a Lista</a>
 </div>
