--- a/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Products/Edit.cshtml
+++ b/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Products/Edit.cshtml
@@ -4,50 +4,47 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar Produtos</h1>
 
-<h4>Product</h4>
 <hr />
-<div class="row">
+<div class="row mb-2">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" class="row" >
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProductID" />
-            <div class="form-group">
+            <div class="form-group  mb-3">
                 <label asp-for="ProductName" class="control-label"></label>
                 <input asp-for="ProductName" class="form-control" />
                 <span asp-validation-for="ProductName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="StockAmount" class="control-label"></label>
                 <input asp-for="StockAmount" class="form-control" />
                 <span asp-validation-for="StockAmount" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3s">
                 <label asp-for="Category" class="control-label"></label>
                 <input asp-for="Category" class="form-control" />
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group mt-4 mb-3">
+                <input type="submit" value="Salvar" class="btn btn-success" />
+                <a asp-action="Index" class="btn btn-light">Voltar a Lista</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
