--- a/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Registers/Edit.cshtml
+++ b/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Registers/Edit.cshtml
@@ -4,16 +4,14 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>Register</h4>
+<h1>Editar Usuário</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="RegisterID" />
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="UserName" class="control-label"></label>
                 <input asp-for="UserName" class="form-control" />
                 <span asp-validation-for="UserName" class="text-danger"></span>
@@ -24,15 +22,14 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-success mt-3" />
+                <a asp-action="Index" class="btn btn-light mt-3">Voltar a Lista</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
