--- a/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Registers/Index.cshtml
+++ b/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Registers/Index.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="text-decoration-none btn btn-dark"><i class="bi bi-plus-lg"></i> Adicionar Novo Usuário</a>
 </p>
 <table class="table">
     <thead>
@@ -31,9 +30,9 @@
                 @Html.DisplayFor(modelItem => item.Password)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.RegisterID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.RegisterID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.RegisterID">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.RegisterID" class="text-dark text-decoration-none">Editar <i class="bi bi-pencil-square"></i></a> |
+                    <a asp-action="Details" asp-route-id="@item.RegisterID" class="text-dark text-decoration-none">Detalhes <i class="bi bi-arrow-right"></i></a> |
+                    <a asp-action="Delete" asp-route-id="@item.RegisterID" class="text-dark text-decoration-none">Deletar <i class="bi bi-trash-fill"></i></a>
             </td>
         </tr>
 }
