--- a/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Sales/Create.cshtml
+++ b/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Sales/Create.cshtml
@@ -4,44 +4,43 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Nova Venda</h1>
 
-<h4>Sale</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="SaleDate" class="control-label"></label>
                 <input asp-for="SaleDate" class="form-control" />
                 <span asp-validation-for="SaleDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Client" class="control-label"></label>
                 <input asp-for="Client" class="form-control" />
                 <span asp-validation-for="Client" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Product" class="control-label"></label>
                 <input asp-for="Product" class="form-control" />
                 <span asp-validation-for="Product" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Employee" class="control-label"></label>
                 <input asp-for="Employee" class="form-control" />
                 <span asp-validation-for="Employee" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Adicionar" class="btn btn-success mt-3" />
+                <a asp-action="Index" class="btn btn-light mt-3">Voltar a Lista</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
