--- a/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Shared/_Layout.cshtml
+++ b/Sistemas-de-Vendas/Sistemas-de-Vendas/Views/Shared/_Layout.cshtml
@@ -3,34 +3,61 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Loja Avanade</title>
+    <title>@ViewData["Title"] - Loja Impacta</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Sistemas_de_Vendas.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Loja Avanade</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+        <nav class="navbar lh-lg  navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <div class="container-fluid  row bg-black ">
+
+                <a class="navbar-brand text-white  col-4 ms-5 " asp-area="" asp-controller="Home" asp-action="Index">Loja Impacta</a>
+                <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between align-content-center">
+                    <ul class="navbar-nav flex-grow-1 ">
 
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="">Produtos</a>
+                        <li class="nav-item col-2 ">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="">Produtos</a>
                         </li>
+
+                        <!--
+                            <li class="nav-item col-2">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Sales" asp-action="">Vendas</a>
+                        </li>
+                        -->
+
+                        <li class="nav-item col-2 ">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Clients" asp-action="">Clientes</a>
+                        </li>
+
+                        <li class="nav-item col-2 ">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Employees" asp-action="">Funcionários</a>
+                        </li>
+
+                        <li class="nav-item col-2 ">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Restrict" asp-action="">Restrito</a>
+                        </li>
+                        <!--Sales vai ta dentro de restrito-->
                     </ul>
                 </div>
+
+
             </div>
         </nav>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+           
             @RenderBody()
+            
             
         </main>
     </div>
@@ -46,3 +73,8 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
+
+
+
+
